--- a/package.json
+++ b/package.json
@@ -1,21 +1,20 @@
 {
   "name": "project-fawn",
-  "version": "1.0.0",
+  "private": true,
   "type": "module",
+  "version": "1.0.0",
+  "engines": { "node": ">=20 <21" },
   "scripts": {
-    "dev": "node ./node_modules/astro/astro.js dev",
-    "build": "node ./node_modules/astro/astro.js build",
-    "preview": "node ./node_modules/astro/astro.js preview"
+    "dev": "astro dev",
+    "build": "astro sync && astro build",
+    "preview": "astro preview"
   },
   "dependencies": {
-    "@astrojs/check": "^0.9.4",
-    "@astrojs/mdx": "^4.3.3",
     "astro": "^5.12.8",
+    "@astrojs/mdx": "^4.3.3"
+  },
+  "devDependencies": {
+    "@astrojs/check": "^0.9.4",
     "typescript": "^5.9.2"
-  },
-  "engines": {
-    "node": ">=20 <21"
-  },
-  "packageManager": "npm@10.9.2"
+  }
 }
-
